Closed
Bug 1138916
Opened 11 years ago
Closed 11 years ago
[service workers][cache]Seg Fault when calling cache.matchAll without parameters
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla39
| Tracking | Status | |
|---|---|---|
| firefox39 | --- | fixed |
People
(Reporter: opatinobugzilla, Assigned: bkelly)
References
Details
(Whiteboard: service workers cache)
Attachments
(2 files)
|
3.88 KB,
text/plain
|
Details | |
|
1.78 KB,
patch
|
baku
:
review+
|
Details | Diff | Splinter Review |
Browser crashes when service worker calls cache.matchAll without parameters. These parameters are optional so it can be call without any.
| Reporter | ||
Updated•11 years ago
|
Whiteboard: service workers cache
Updated•11 years ago
|
Blocks: ServiceWorkers-v1
| Assignee | ||
Comment 1•11 years ago
|
||
Thanks Oscar!
I believe I know what this is. When I added the WorkerFeature to Cache I used assertions to check that a feature is only added once to each actor. This doesn't quite hold for the stream control actor because each one manages multiple streams.
The tests did not catch this because the matchAll() is likely done on main thread and not worker. There is a separate bug to improve test coverage.
I'll have a patch shortly.
| Assignee | ||
Updated•11 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 2•11 years ago
|
||
Andrea,
There is a small bug in the WorkerFeature code I wrote for Cache. I assumed each actor would only ever get a Feature added once. This doesn't hold for the CacheStreamControlChild, though, as it may be controlling multiple ReadStream objects.
This patch fixes the issue by permitting a duplicate SetFeature() as long as the later Feature objects are identical to the first Feature.
Attachment #8571979 -
Flags: review?(amarchesini)
| Assignee | ||
Comment 3•11 years ago
|
||
Note, I verified this test triggers the reported assertion as well.
Updated•11 years ago
|
Attachment #8571979 -
Flags: review?(amarchesini) → review+
| Assignee | ||
Comment 4•11 years ago
|
||
| Assignee | ||
Updated•11 years ago
|
Keywords: checkin-needed
| Assignee | ||
Updated•11 years ago
|
Keywords: checkin-needed
| Assignee | ||
Comment 5•11 years ago
|
||
Comment 6•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
status-firefox39:
--- → fixed
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
| Reporter | ||
Comment 7•11 years ago
|
||
Now matchAll without parameters is working. Thanks bkelly.
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•