Bug 1138916 Fix Cache::MatchAll() assertion in WorkerFeature handling. r=baku